# insight-notes

./: .gitignore  App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
components/: AiChatPanel.tsx  AiReviewModal.tsx  CommandPalette.tsx  DataMigrationModal.tsx  EditorContent.tsx  EditorToolbar.tsx  ExportModal.tsx  GitReportModal.tsx  Logo.tsx  MarkdownPreview.tsx  Mermaid.tsx  NoteList.tsx  SettingsModal.tsx  Sidebar.tsx  TagEditor.tsx
electron/: main.js  preload.js
resources/: icon.icns
scripts/: gen-icon.js  generate-icon.js  tauri-build.sh
services/: exporters.ts  gemini.ts  git.ts  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
