[package]
name = "zhishi"
version = "0.1.0"
description = "Zhishi Desktop"
authors = ["Kris"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
